fix text align

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -20,7 +20,7 @@ p {
   margin: 0 0 0 0;
   font-size: .8rem;
   line-height: 1.8;
-  text-align: justify;
+  text-align: left;
 }
 
 p + p {
